<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_activity">login</string>
    <string name="user_account">输入手机号\qq号</string>
    <string name="user_password">请输入密码</string>
    <string name="user_login">登录</string>
    <string name="user_registor">点击注册</string>
    <string name="user_registor_phone">输入手机号</string>
    <string name="user_registor_checknum">输入验证码</string>
    <string name="user_registor_next">注册</string>
    <string name="user_registor_get_checknum">获取验证码</string>
    <string name="user_registor_get_setpwd">请设置密码（不少于六位）</string>
    <string name="user_registor_get_checkpwd">再次输入密码</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
