<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#eee"
                android:orientation="vertical"
                android:gravity="center_horizontal">
    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#877"
            android:text="注册"
            />

    </RelativeLayout>
    <EditText
        android:id="@+id/user_registor_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_top_layout"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:background="@drawable/login_editbox"
        android:hint="@string/user_registor_phone"/>

    <EditText
        android:id="@+id/user_registor_psd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_registor_phone"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:background="@drawable/login_editbox"
        android:hint="@string/user_password"/>

    <EditText
        android:id="@+id/user_registor_checknum"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_registor_psd"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_editbox"
        android:password="true"
        android:singleLine="true"
        android:hint="@string/user_registor_checknum"/>
    <Button
        android:id="@+id/user_registor_get_checknum"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/user_registor_psd"
        android:layout_toRightOf="@+id/user_registor_checknum"
        android:layout_alignBaseline="@+id/user_registor_checknum"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textColor="#000"
        android:textSize="15sp"
        android:singleLine="true"
        android:text="@string/user_registor_get_checknum"
        android:background="@drawable/btn_login_bkg"/>
    <Button
        android:id="@+id/user_registor_next"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/user_registor_checknum"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:text="@string/user_registor_next"
        android:background="@drawable/btn_login_bkg"/>
</RelativeLayout>