<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#eee"
                android:orientation="vertical"
                android:gravity="center_horizontal">
    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#877"
            android:text="@string/user_login"
            />

    </RelativeLayout>
    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_top_layout"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:background="@drawable/login_editbox"
        android:hint="@string/user_account"/>
    <EditText
        android:id="@+id/login_passwd_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_edit"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_editbox"
        android:password="true"
        android:singleLine="true"
        android:hint="@string/user_password"/>
    <Button
        android:id="@+id/user_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/login_passwd_edit"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:background="@drawable/btn_login_bkg"
        android:text="@string/user_login"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/user_login"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="还没注册？"
            android:textSize="18sp"
            android:textColor="#877"
            android:background="#0000"
            />
        <Button
            android:id="@+id/user_registor"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginRight="80dp"
            android:layout_alignParentRight="true"
            android:text="@string/user_registor"
            android:background="@null"
            android:textColor="#0f0"
            android:textSize="18sp"

            />
    </RelativeLayout>
</RelativeLayout>